project/test/semantics/bad/input/Bad70_shouldNotAllowRawUseOfGenericClasses.ty
singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            val list1: List[Int] = List[Int](3, 4, 222, 5);
            val list2: List = List("One", "TWO", "Threee", "4", "Five", "Six");
            // GenericArgumentListInvalidError
        }
    }
}
